--- a/T7-bootstrap-sass-master/aula-4/styles/scss/_header.scss
+++ b/T7-bootstrap-sass-master/aula-4/styles/scss/_header.scss
@@ -1,8 +1,5 @@
-$color-primary: #000000;
-
 nav.navbar {
     .navbar-header {
-        background: $color-primary;
+        background: $black;
     }
-    
 }
