--- a/T7-bootstrap-sass-master/aula-4/styles/scss/_header.scss
+++ b/T7-bootstrap-sass-master/aula-4/styles/scss/_header.scss
@@ -1,5 +1,9 @@
 nav.navbar {
-    .navbar-header {
-        background: $black;
+    .botaoX {
+        @include button(10px, 20px, $color-secondary, '#cccccc');
+    }
+
+    h1 {
+        @include title (uppercase, $color-primary);
     }
 }
