--- a/T7-bootstrap-sass-master/aula-4/styles/scss/_variables.scss
+++ b/T7-bootstrap-sass-master/aula-4/styles/scss/_variables.scss
@@ -4,7 +4,7 @@ $white: #ffffff;
 $blue: #5da09c;
 $gray: #eeeeee;
 
-$color-primary: $black;
+$color-primary: $blue;
 $color-secondary: $white;
 $color-icon: $blue;
 $color-bg: $gray;
