--- a/T7-bootstrap-sass-master/aula-4/styles/style.css
+++ b/T7-bootstrap-sass-master/aula-4/styles/style.css
@@ -1,11 +1,14 @@
-.botaoX {
+nav.navbar .botaoX {
   padding: 10px 20px;
   background: #ffffff;
   text-transform: capitalize;
+  font-size: 18px;
   color: "#cccccc";
 }
 
-nav.navbar .navbar-header {
-  background: #000000;
+nav.navbar h1 {
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #5da09c;
 }
 /*# sourceMappingURL=style.css.map */
