--- a/sass/institucional/styles/scss/_base.scss
+++ b/sass/institucional/styles/scss/_base.scss
@@ -29,3 +29,8 @@ button {
         width: 90%;
     }
 }
+
+// selects all classes beginning with "section-"
+div[class^="section-"]{
+    padding: $padding 0;
+}
