--- a/sass/institucional/styles/style.css
+++ b/sass/institucional/styles/style.css
@@ -32,6 +32,10 @@ button {
   }
 }
 
+div[class^="section-"] {
+  padding: 40px 0;
+}
+
 .header {
   padding: 20px 0;
   position: absolute;
@@ -178,7 +182,6 @@ button {
 }
 
 .section-clients .container {
-  padding-top: 40px;
   text-align: center;
 }
 
@@ -192,6 +195,6 @@ button {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 20px;
+  padding-top: 40px;
 }
 /*# sourceMappingURL=style.css.map */
