--- a/sass/institucional/styles/style.css
+++ b/sass/institucional/styles/style.css
@@ -179,6 +179,7 @@ div[class^="section-"] {
 
 .section-clients p {
   color: #727272;
+  font-size: 16px;
 }
 
 .section-clients .container {
@@ -195,6 +196,10 @@ div[class^="section-"] {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 40px;
+  margin-top: 40px;
+}
+
+.section-clients .container .list-unstyled li + li {
+  margin-left: 30px;
 }
 /*# sourceMappingURL=style.css.map */
