--- a/react/react-ii/my-app/src/index.css
+++ b/react/react-ii/my-app/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.comentario {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  border-radius: 10px;
+  background-color: #f3f3f3;
+  padding: 25px;
+  display: flex;
+  max-width: 960px;
+  margin: 50px auto;
+  align-items: center;
+}
+
+.comentario__perfil {
+  width: 100%;
+  max-width: 200px;
+  margin-right: 50px;
+  border-radius: 10px;
+}
+
+.comentario__nome {
+  margin: 0;
+  font-size: 24px;
+}
+
+.comentario__subtitulo {
+  margin: 0;
+  margin-bottom: 15px;
+  font-weight: normal;
+  font-size: 20px;
+}
+
+.comentario hr {
+  max-width: 200px;
+  margin-left: 0;
 }
